--- a/HelloWorld/Pages/_ViewImports.cshtml
+++ b/HelloWorld/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Hello_World
-@namespace Hello_World.Pages
+@using HelloWorld
+@namespace HelloWorld.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
