--- a/HelloWorld/Pages/_ViewImports.cshtml
+++ b/HelloWorld/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using HelloWorld
-@namespace HelloWorld.Pages
+@using FitnessClub
+@namespace FitnessClub.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
