Adding google log in button

--- a/FitnessClub/Pages/GoogleLogin.cshtml
+++ b/FitnessClub/Pages/GoogleLogin.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Google Sign-in";
 }
 
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="819088013276-3fu3lq59ttk80bmllfcgko2t9lob7tbq.apps.googleusercontent.com">
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+<!--
 <div class="text-center">
     <h1 class="display-4">Placeholder for Google Sign-in</h1>
 </div>
+-->
