--- a/FitnessClub/Pages/GoogleLogin.cshtml
+++ b/FitnessClub/Pages/GoogleLogin.cshtml
@@ -8,6 +8,16 @@
 <meta name="google-signin-client_id" content="819088013276-3fu3lq59ttk80bmllfcgko2t9lob7tbq.apps.googleusercontent.com">
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
+<a href="#" onclick="signOut();">Sign out</a>
+<script>
+    function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+            console.log('User signed out.');
+        });
+    }
+</script>
+
 <!--
 <div class="text-center">
     <h1 class="display-4">Placeholder for Google Sign-in</h1>
