--- a/FitnessClub/Pages/Shared/_Layout.cshtml
+++ b/FitnessClub/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/GoogleLogin">Sign In with Google</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DataManagement/People/Index">Manage People Database</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
