Unit Of Work implementation

--- a/FitnessClub/Pages/DataManagement/People/Create.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.CreateModel
+@model FitnessClub.Pages.DataManagement.People.CreateModel
 
 @{
     ViewData["Title"] = "Create";
