--- a/FitnessClub/Pages/DataManagement/People/Index.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.IndexModel
+@model FitnessClub.Pages.DataManagement.People.IndexModel
 
 @{
     ViewData["Title"] = "Index";
