--- a/FitnessClub/Pages/DataManagement/People/Delete.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.DeleteModel
+@model FitnessClub.Pages.DataManagement.People.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
