--- a/FitnessClub/Pages/DataManagement/People/Details.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.DetailsModel
+@model FitnessClub.Pages.DataManagement.People.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
