--- a/FitnessClub/Pages/DataManagement/People/Edit.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.EditModel
+@model FitnessClub.Pages.DataManagement.People.EditModel
 
 @{
     ViewData["Title"] = "Edit";
