--- a/FitnessClub/Pages/Shared/_Layout.cshtml
+++ b/FitnessClub/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/GoogleLogin">Sign In with Google</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/DataManagement/People/Index">Manage People Database</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DataManagement/DataManagement">Database</a>
                         </li>
 
                     </ul>
