--- a/FitnessClub/Pages/DataManagement/DataManagement.cshtml
+++ b/FitnessClub/Pages/DataManagement/DataManagement.cshtml
@@ -17,6 +17,12 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="./People/Index">People</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Employees/Index">Employees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Coaches/Index">Coaches</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="./Sessions/Index">Sessions</a>
                     </li>
                 </ul>
