--- a/FitnessClub/Pages/DataManagement/DataManagement.cshtml
+++ b/FitnessClub/Pages/DataManagement/DataManagement.cshtml
@@ -17,10 +17,16 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="./People/Index">People</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Customers/Index">Customers</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="./Employees/Index">Employees</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="./Coaches/Index">Coaches</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Addresses/Index">Addresses</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="./Sessions/Index">Sessions</a>
