Created management page for every table in the database.

--- a/FitnessClub/Pages/DataManagement/DataManagement.cshtml
+++ b/FitnessClub/Pages/DataManagement/DataManagement.cshtml
@@ -31,6 +31,18 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="./Sessions/Index">Sessions</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./CoachRatings/Index">Coach Ratings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Holidays/Index">Holidays</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./SessionEnrollments/Index">SessionEnrollments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Memberships/Index">Memberships</a>
+                    </li>
                 </ul>
             </div>
         </div>
