--- a/FitnessClub/Pages/DataManagement/Addresses/Create.cshtml
+++ b/FitnessClub/Pages/DataManagement/Addresses/Create.cshtml
@@ -14,8 +14,8 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Address.PersonID" class="control-label"></label>
-                <select asp-for="Address.PersonID" class ="form-control" asp-items="ViewBag.PersonID"></select>
+                <label asp-for="Address.AddressID" class="control-label"></label>
+                <select asp-for="Address.AddressID" class ="form-control" asp-items="ViewBag.PersonID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Address.Street" class="control-label"></label>
