--- a/FitnessClub/Pages/DataManagement/Addresses/Edit.cshtml
+++ b/FitnessClub/Pages/DataManagement/Addresses/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Address.AddressID" />
             <div class="form-group">
-                <label asp-for="Address.PersonID" class="control-label"></label>
-                <select asp-for="Address.PersonID" class="form-control" asp-items="ViewBag.PersonID"></select>
-                <span asp-validation-for="Address.PersonID" class="text-danger"></span>
+                <label asp-for="Address.AddressID" class="control-label"></label>
+                <select asp-for="Address.AddressID" class="form-control" asp-items="ViewBag.PersonID"></select>
+                <span asp-validation-for="Address.AddressID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address.Street" class="control-label"></label>
