--- a/FitnessClub/Pages/DataManagement/SessionEnrollments/Delete.cshtml
+++ b/FitnessClub/Pages/DataManagement/SessionEnrollments/Delete.cshtml
@@ -14,7 +14,7 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SessionEnrollment.PersonID)
+            @Html.DisplayNameFor(model => model.SessionEnrollment.Customer)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SessionEnrollment.PersonID)
@@ -40,7 +40,6 @@
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="SessionEnrollment.SessionEnrollmentID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
