--- a/FitnessClub/Pages/DataManagement/SessionEnrollments/Details.cshtml
+++ b/FitnessClub/Pages/DataManagement/SessionEnrollments/Details.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SessionEnrollment.PersonID)
+            @Html.DisplayNameFor(model => model.SessionEnrollment.Customer)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SessionEnrollment.PersonID)
@@ -39,6 +39,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.SessionEnrollment.SessionEnrollmentID">Edit</a> |
+    <a asp-page="./Edit" asp-route-PersonID="@Model.SessionEnrollment.PersonID" asp-route-SessionID="@Model.SessionEnrollment.SessionID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
