Fixing wrong connection string issue

--- a/FitnessClub/Pages/Index.cshtml
+++ b/FitnessClub/Pages/Index.cshtml
@@ -7,3 +7,8 @@
 <div class="text-center">
     <h1 class="display-4">Hello Fitness World!</h1>
 </div>
+
+<p>@Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")</p>
+
+<p>@Environment.GetEnvironmentVariable("APPSETTING_ConnectionString:FCContext")</p>
+
