--- a/FitnessClub/Pages/Index.cshtml
+++ b/FitnessClub/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Hello Fitness World!</h1>
 </div>
 
-<p>@Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")</p>
+<p>test @Environment.GetEnvironmentVariable("APPSETTING_ASPNETCORE_ENVIRONMENT")</p>
 
-<p>@Environment.GetEnvironmentVariable("APPSETTING_ConnectionString:FCContext")</p>
+<p>test @Environment.GetEnvironmentVariable("APPSETTING_ConnectionString:FCContext")</p>
 
