Implementing logging in a file and database depending on environment.

--- a/FitnessClub/Pages/DataManagement/UserData/Delete.cshtml
+++ b/FitnessClub/Pages/DataManagement/UserData/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.DeleteModel
+@model FitnessClub.Pages.DataManagement.UserData.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
