--- a/FitnessClub/Pages/DataManagement/DataManagement.cshtml
+++ b/FitnessClub/Pages/DataManagement/DataManagement.cshtml
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="./UserData/Index">User Data</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="./Logs/LogList">Logs</a>
+                    </li>
                 </ul>
             </div>
         </div>
