--- a/FitnessClub/Pages/DataManagement/UserData/Create.cshtml
+++ b/FitnessClub/Pages/DataManagement/UserData/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.CreateModel
+@model FitnessClub.Pages.DataManagement.UserData.CreateModel
 
 @{
     ViewData["Title"] = "Create";
