--- a/FitnessClub/Pages/DataManagement/UserData/Index.cshtml
+++ b/FitnessClub/Pages/DataManagement/UserData/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FitnessClub.IndexModel
+@model FitnessClub.Pages.DataManagement.UserData.IndexModel
 
 @{
     ViewData["Title"] = "Index";
