--- a/FitnessClub/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/FitnessClub/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -8,25 +8,32 @@
 <h4>Associate your @Model.LoginProvider account.</h4>
 <hr />
 
-<p class="text-info">
-    You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
-</p>
+    <p class="text-info">
+        You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
+        Please enter your email address and your personal data, then click the Register button to finish
+        logging in.
+    </p>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+
+
+<form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <div class="row">
+
+        <div class="col-md-4 col-md-offset-1">
+            <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
+                <div class="form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+            
             <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+        </div>
+        <partial name="./Templates/_PersonalDataForm.cshtml" for="@Model.Customer">
+        <partial name="./Templates/_AddressForm.cshtml" for="@Model.Address">
     </div>
-</div>
+</form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
