--- a/FitnessClub/Pages/Shared/_Layout.cshtml
+++ b/FitnessClub/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/DataManagement/DataManagement">Database</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CustomerPanel/_CustomerPanel">Customer Panel Test</a>
+                        </li>
 
                     </ul>
                 </div>
