--- a/FitnessClub/Pages/Shared/_Layout.cshtml
+++ b/FitnessClub/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/DataManagement/DataManagement">Database</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CustomerPanel/_CustomerPanel">Customer Panel Test</a>
+                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/CustomerPanel/CustomerPanel">Customer Panel Test</a>
                         </li>
 
                     </ul>
