--- a/FitnessClub/Pages/DataManagement/Coaches/Edit.cshtml
+++ b/FitnessClub/Pages/DataManagement/Coaches/Edit.cshtml
@@ -15,6 +15,10 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Coach.PersonID" />
             <div class="form-group">
+                <label asp-for="Coach.AspNetUser" class="control-label"></label>
+                <select asp-for="Coach.AspNetUserId" class="form-control" asp-items="ViewBag.Users"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Coach.FirstName" class="control-label"></label>
                 <input asp-for="Coach.FirstName" class="form-control" />
                 <span asp-validation-for="Coach.FirstName" class="text-danger"></span>
