--- a/FitnessClub/Pages/DataManagement/Customers/Create.cshtml
+++ b/FitnessClub/Pages/DataManagement/Customers/Create.cshtml
@@ -14,6 +14,10 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Customer.AspNetUser" class="control-label"></label>
+                <select asp-for="Customer.AspNetUserId" class="form-control" asp-items="ViewBag.Users"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Customer.FirstName" class="control-label"></label>
                 <input asp-for="Customer.FirstName" class="form-control" />
                 <span asp-validation-for="Customer.FirstName" class="text-danger"></span>
