--- a/FitnessClub/Pages/DataManagement/Customers/Delete.cshtml
+++ b/FitnessClub/Pages/DataManagement/Customers/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Customer.AspNetUserId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.AspNetUserId)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Customer.FirstName)
         </dt>
         <dd class="col-sm-10">
