--- a/FitnessClub/Pages/DataManagement/Employees/Details.cshtml
+++ b/FitnessClub/Pages/DataManagement/Employees/Details.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Employee.AspNetUserId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Employee.AspNetUserId)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Employee.FirstName)
         </dt>
         <dd class="col-sm-10">
