--- a/FitnessClub/Pages/DataManagement/People/Create.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Create.cshtml
@@ -14,6 +14,10 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Person.AspNetUser" class="control-label"></label>
+                <select asp-for="Person.AspNetUserId" class="form-control" asp-items="ViewBag.Users"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Person.FirstName" class="control-label"></label>
                 <input asp-for="Person.FirstName" class="form-control" />
                 <span asp-validation-for="Person.FirstName" class="text-danger"></span>
@@ -37,6 +41,11 @@
                 <label asp-for="Person.Birthdate" class="control-label"></label>
                 <input asp-for="Person.Birthdate" class="form-control" />
                 <span asp-validation-for="Person.Birthdate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Person.AspNetUserId" class="control-label"></label>
+                <input asp-for="Person.AspNetUserId" class="form-control" />
+                <span asp-validation-for="Person.AspNetUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
