--- a/FitnessClub/Pages/DataManagement/People/Delete.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Person.AspNetUserId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Person.AspNetUserId)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Person.FirstName)
         </dt>
         <dd class="col-sm-10">
@@ -53,6 +59,9 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Person.CreatedBy)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Person.AspNetUserId)
         </dd>
     </dl>
     
