--- a/FitnessClub/Pages/DataManagement/People/Details.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Details.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Person.AspNetUserId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Person.AspNetUserId)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Person.FirstName)
         </dt>
         <dd class="col-sm-10">
@@ -52,6 +58,9 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Person.CreatedBy)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Person.AspNetUserId)
         </dd>
     </dl>
 </div>
