--- a/FitnessClub/Pages/DataManagement/People/Edit.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Edit.cshtml
@@ -15,6 +15,10 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Person.PersonID" />
             <div class="form-group">
+                <label asp-for="Person.AspNetUser" class="control-label"></label>
+                <select asp-for="Person.AspNetUserId" class="form-control" asp-items="ViewBag.Users"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Person.FirstName" class="control-label"></label>
                 <input asp-for="Person.FirstName" class="form-control" />
                 <span asp-validation-for="Person.FirstName" class="text-danger"></span>
@@ -38,6 +42,11 @@
                 <label asp-for="Person.Birthdate" class="control-label"></label>
                 <input asp-for="Person.Birthdate" class="form-control" />
                 <span asp-validation-for="Person.Birthdate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Person.AspNetUserId" class="control-label"></label>
+                <input asp-for="Person.AspNetUserId" class="form-control" />
+                <span asp-validation-for="Person.AspNetUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
