--- a/FitnessClub/Pages/DataManagement/People/Index.cshtml
+++ b/FitnessClub/Pages/DataManagement/People/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Person[0].AspNetUserId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Person[0].FirstName)
             </th>
             <th>
@@ -34,12 +37,18 @@
             <th>
                 @Html.DisplayNameFor(model => model.Person[0].CreatedBy)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Person[0].AspNetUserId)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model.Person) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUserId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
@@ -60,6 +69,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUserId)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.PersonID">Edit</a> |
