Saving progress before next changes. Fixed issue with multiple accounts with same email being created, as well as made progress with coach rating system.

--- a/FitnessClub/Areas/Identity/Pages/CustomerPanel/RateCoaches.cshtml
+++ b/FitnessClub/Areas/Identity/Pages/CustomerPanel/RateCoaches.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using FitnessClub.Data.Models.ViewModels
 @model FitnessClub.Areas.Identity.Pages.CustomerPanel.RateCoachesModel
 @{
     ViewData["Title"] = "Rate Coaches";
@@ -17,48 +18,89 @@
     </div>
     <div class="col-md-9">
         <div>
-            <table class="table">
+            <form method="post">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Session Type</th>
+                            <th>Coach</th>
+                            <th>Weekday</th>
+                            <th>Date</th>
+                            <th>Start time</th>
+                            <th>Finish time</th>
+                            <th>Room number</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.SessionEnrollments.Select(s => new SessionViewModel(s.Session)))
+                        {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SessionType)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CoachFullname)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Weekday)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Date)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StartTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FinishTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Room)
+                            </td>
+                            <td>
+                                @{
+                                    Model.ChosenSession = item;
+                                }
+                                <a class ="text-white btn btn-primary" asp-page="/CustomerPanel/CreateRating" asp-area="Identity" asp-route-id="@item.SessionID">Rate</a>
+                            </td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </form>
+
+
+        </div>
+        <!--
+    </div>
+    <div class="col-md-1">
+        <div>
+            <table>
                 <thead>
                     <tr>
-                        <th>Session Type</th>
-                        <th>Coach</th>
-                        <th>Weekday</th>
-                        <th>Date</th>
-                        <th>Start time</th>
-                        <th>Finish time</th>
-                        <th>Room number</th>
+                        <th>Rating</th>
+                        <th>Submit</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.SessionsList.Select(s => new FitnessClub.Data.Models.ViewModels.SessionViewModel(s)))
-                    {
                     <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.SessionType)
+                        <td class="form-group">
+                            <select asp-for="Model.CoachRating.Rating" class="form-control">
+                                <option value=0>0</option>
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                            </select>
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.CoachFullname)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Weekday)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Date)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StartTime)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FinishTime)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Room)
+                            <button type="submit" class="btn btn-primary">Register</button>
                         </td>
                     </tr>
-                    }
                 </tbody>
             </table>
-
         </div>
+        -->
     </div>
 </div>
