--- a/FitnessClub/Pages/DataManagement/CoachRatings/Create.cshtml
+++ b/FitnessClub/Pages/DataManagement/CoachRatings/Create.cshtml
@@ -15,8 +15,8 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CoachRating.PersonID" class="control-label"></label>
-                <select asp-for="CoachRating.PersonID" class="form-control" asp-items="ViewBag.PersonID"></select>
+                <label asp-for="CoachRating.SessionID" class="control-label"></label>
+                <select asp-for="CoachRating.SessionID" class="form-control" asp-items="ViewBag.PersonID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="CoachRating.Rating" class="control-label"></label>
