--- a/FitnessClub/Pages/DataManagement/CoachRatings/Delete.cshtml
+++ b/FitnessClub/Pages/DataManagement/CoachRatings/Delete.cshtml
@@ -14,10 +14,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CoachRating.PersonID)
+            @Html.DisplayNameFor(model => model.CoachRating.SessionID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CoachRating.PersonID)
+            @Html.DisplayFor(model => model.CoachRating.SessionID)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CoachRating.Rating)
