--- a/FitnessClub/Pages/DataManagement/CoachRatings/Edit.cshtml
+++ b/FitnessClub/Pages/DataManagement/CoachRatings/Edit.cshtml
@@ -16,8 +16,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CoachRating.CoachRatingID" />
             <div class="form-group">
-                <label asp-for="CoachRating.PersonID" class="control-label"></label>
-                <select asp-for="CoachRating.PersonID" class="form-control" asp-items="ViewBag.PersonID"></select>
+                <label asp-for="CoachRating.SessionID" class="control-label"></label>
+                <select asp-for="CoachRating.SessionID" class="form-control" asp-items="ViewBag.SessionID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="CoachRating.Rating" class="control-label"></label>
