Implemented business logic layer for controlling customer entities, as well as finished coach rating system.

--- a/FitnessClub/Areas/Identity/Pages/CustomerPanel/CustomerPanel.cshtml
+++ b/FitnessClub/Areas/Identity/Pages/CustomerPanel/CustomerPanel.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@model FitnessClub.Areas.Identity.Pages.CustomerPanel.CustomerPanelModel
 @{
     ViewData["Title"] = "_CustomerPanel";
     Layout = "~/Pages/Shared/_Layout.cshtml";
