--- a/FitnessClub/Areas/Identity/Pages/CustomerPanel/Calendar.cshtml
+++ b/FitnessClub/Areas/Identity/Pages/CustomerPanel/Calendar.cshtml
@@ -1,20 +1,19 @@
 ﻿@page
-@model FitnessClub.Areas.Identity.Pages.CustomerPanel.CalendarModel
+
+@using FitnessClub.Areas.Identity.Pages.CustomerPanel;
+@model CalendarModel
 @{
-    ViewData["Title"] = "_CustomerPanel";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Calendar";
+    ViewData["ActivePage"] = CustomerPanelNavPages.Calendar;
+    Layout = "./_Layout";
 }
 
 <head>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
-<h1>Customer Panel</h1>
-
+<h4>@ViewData["Title"]</h4>
 <div class="row">
-    <div class="col-md-3">
-        <partial name="./Shared/_Menu" />
-    </div>
     <div class="col-md-9">
         <h1>This page will have a calendar with all sessions.</h1>
     </div>
