Cleared up CustomerPanel area

--- a/FitnessClub/Areas/CustomerPanel/Pages/CoachRating.cshtml
+++ b/FitnessClub/Areas/CustomerPanel/Pages/CoachRating.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@using FitnessClub.Areas.Identity.Pages.CustomerPanel;
+@using FitnessClub.Areas.CustomerPanel.Pages;
 @model CoachRatingModel
 @{
     ViewData["Title"] = "Coach Rating";
