--- a/FitnessClub/Areas/CustomerPanel/Pages/_CustomerPanelNav.cshtml
+++ b/FitnessClub/Areas/CustomerPanel/Pages/_CustomerPanelNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using FitnessClub.Areas.Identity.Pages.CustomerPanel;
+﻿@using FitnessClub.Areas.CustomerPanel.Pages;
 
 <head>
     <link rel="stylesheet" href="~/css/site.css" />
