--- a/FitnessClub/Areas/CustomerPanel/Pages/Calendar.cshtml
+++ b/FitnessClub/Areas/CustomerPanel/Pages/Calendar.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@using FitnessClub.Areas.Identity.Pages.CustomerPanel;
+@using FitnessClub.Areas.CustomerPanel.Pages;
 @model CalendarModel
 @{
     ViewData["Title"] = "Calendar";
