--- a/FitnessClub/Areas/CustomerPanel/Pages/_Layout.cshtml
+++ b/FitnessClub/Areas/CustomerPanel/Pages/_Layout.cshtml
@@ -1,13 +1,12 @@
 ﻿@{
-    Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    Layout = "/Pages/Shared/_Layout.cshtml";
 }
-
 <h1>Customer Panel</h1>
 
 <div>
     <div class="row">
         <div class="col-md-3">
-            <partial name="_CustomerPanelNav" />
+            <partial name="/Areas/CustomerPanel/Pages/_CustomerPanelNav.cshtml" />
         </div>
         <div class="col-md-9">
             @RenderBody()
