Split "UserService" class into several smaller classes to not violate Single Responsibility Principle.

--- a/FitnessClub/wwwroot/css/site.css
+++ b/FitnessClub/wwwroot/css/site.css
@@ -90,6 +90,10 @@ li.menu-item:hover {
     /*single items in menu*/
     background-color: #65ff86;
 }
+li.menu-item.active {
+    background-color: #46eeff;
+}
+
 
 a.menu-link {
     /*links used in menu*/
