--- a/FitnessClub/Areas/CustomerPanel/Pages/_CustomerPanelNav.cshtml
+++ b/FitnessClub/Areas/CustomerPanel/Pages/_CustomerPanelNav.cshtml
@@ -1,14 +1,21 @@
-﻿@using FitnessClub.Areas.CustomerPanel.Pages;
-
-<head>
+﻿<head>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
 
 <ul class="menu">
-    <li class="menu-item"><a class="menu-link @CustomerPanelNavPages.CalendarNavClass(ViewContext)" id="calendar" asp-page="./Calendar">Calendar</a></li>
-    <li class="menu-item"><a class="menu-link @CustomerPanelNavPages.CoachRatingNavClass(ViewContext)" id="coach-rating" asp-page="./CoachRating">Coach Rating</a></li>
-    <li class="menu-item"><a class="menu-link @CustomerPanelNavPages.MembershipNavClass(ViewContext)" id="membership" asp-page="./Membership">Membership</a></li>
-    <li class="menu-item"><a class="menu-link @CustomerPanelNavPages.AccountSettingsNavClass(ViewContext)" id="account-settings" asp-page="./AccountSettings">Account Settings</a></li>
+    <li class="menu-item @CustomerPanelNavPages.CalendarNavClass(ViewContext)"><a class="menu-link " id="calendar" asp-area="CustomerPanel" asp-page="/Calendar">Calendar</a></li>
+    <li class="menu-item @CustomerPanelNavPages.CoachRatingNavClass(ViewContext)"><a class="menu-link" id="coach-rating" asp-area="CustomerPanel" asp-page="/CoachRating">Coach Rating</a></li>
+    <li class="menu-item @CustomerPanelNavPages.MembershipNavClass(ViewContext)"><a class="menu-link" id="membership" asp-area="CustomerPanel" asp-page="/Membership">Membership</a></li>
+    <li class="menu-item @CustomerPanelNavPages.AccountSettingsNavClass(ViewContext)">
+        <a class="menu-link" 
+           id="account-settings" 
+           asp-area="Account" 
+           asp-page="/Manage/Index" 
+           asp-route-layout=@CustomerPanelNavPages.LayoutString 
+           asp-route-active=@CustomerPanelNavPages.AccountSettings>
+            Account Settings
+        </a>
+    </li>
 </ul>
 
