--- a/FitnessClub/Areas/Account/Pages/Manage/ExternalLogins.cshtml
+++ b/FitnessClub/Areas/Account/Pages/Manage/ExternalLogins.cshtml
@@ -2,7 +2,8 @@
 @model ExternalLoginsModel
 @{
     ViewData["Title"] = "Manage your external logins";
-    ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
+    ViewData["ActivePage"] = Model.LayoutData.ActivePage;
+    Layout = Model.LayoutData.Layout;
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
@@ -18,7 +19,7 @@
                     <td>
                         @if (Model.ShowRemoveButton)
                         {
-                            <form id="remove-login" asp-page-handler="RemoveLogin" method="post">
+                            <form id="remove-login" asp-page-handler="RemoveLogin" asp-route-layout=@Model.LayoutData.Layout asp-route-active=@Model.LayoutData.ActivePage method="post">
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
@@ -40,7 +41,7 @@
 {
     <h4>Add another service to log in.</h4>
     <hr />
-    <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
+    <form id="link-login-form" asp-page-handler="LinkLogin" asp-route-layout=@Model.LayoutData.Layout asp-route-active=@Model.LayoutData.ActivePage method="post" class="form-horizontal">
         <div id="socialLoginList">
             <p>
                 @foreach (var provider in Model.OtherLogins)
@@ -51,3 +52,4 @@
         </div>
     </form>
 }
+<a class="btn btn-primary mar-top-10" asp-area="Account" asp-page="/Manage/Index" asp-route-layout=@Model.LayoutData.Layout asp-route-active=@Model.LayoutData.ActivePage>Back</a>
