--- a/FitnessClub/Areas/Account/Pages/Manage/Index.cshtml
+++ b/FitnessClub/Areas/Account/Pages/Manage/Index.cshtml
@@ -2,18 +2,59 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Account Settings";
-    ViewData["ActivePage"] = Model.ActivePageString;
-    Layout = Model.LayoutString;
+    ViewData["ActivePage"] = Model.LayoutData.ActivePage;
+    Layout = Model.LayoutData.Layout;
 }
 
 <head>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
-<h4>@ViewData["Title"]</h4>
+<h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-9">
-        <h1>Im an index in other folder!</h1>
-        <h1>@Model.LayoutString</h1>
+    <div class="col-md-8">
+        <h3>Edit your data</h3>
+        <form id="profile-form" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="EmailAddress"></label>
+                <input asp-for="EmailAddress" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address.Street"></label>
+                <input asp-for="Input.Address.Street" class="form-control" />
+                <span asp-validation-for="Input.Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address.ZipCode"></label>
+                <input asp-for="Input.Address.ZipCode" class="form-control" />
+                <span asp-validation-for="Input.Address.ZipCode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address.City"></label>
+                <input asp-for="Input.Address.City" class="form-control" />
+                <span asp-validation-for="Input.Address.City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address.Region"></label>
+                <input asp-for="Input.Address.Region" class="form-control" />
+                <span asp-validation-for="Input.Address.Region" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address.Country"></label>
+                <input asp-for="Input.Address.Country" class="form-control" />
+                <span asp-validation-for="Input.Address.Country" class="text-danger"></span>
+            </div>
+            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+        </form>
+    </div>
+    <div class="col-md-4">
+        <h3>Other settings</h3>
+        <partial name="_SettingsMenu" for=@Model.LayoutData >
     </div>
 </div>
