--- a/FitnessClub/Areas/Account/Pages/Manage/SetPassword.cshtml
+++ b/FitnessClub/Areas/Account/Pages/Manage/SetPassword.cshtml
@@ -1,21 +1,21 @@
 ﻿@page
-@model ChangePasswordModel
+@model SetPasswordModel
 @{
-    ViewData["Title"] = "Change password";
-    ViewData["ActivePage"] = ManageNavPages.ChangePassword;
+    ViewData["Title"] = "Set password";
+    ViewData["ActivePage"] = Model.LayoutData.ActivePage;
+    Layout = Model.LayoutData.Layout;
 }
 
-<h4>@ViewData["Title"]</h4>
+<h4>Set your password</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
+<p class="text-info">
+    You do not have a local username/password for this site. Add a local
+    account so you can log in without an external login.
+</p>
 <div class="row">
     <div class="col-md-6">
-        <form id="change-password-form" method="post">
+        <form id="set-password-form" method="post" asp-route-layout=@Model.LayoutData.Layout asp-route-active=@Model.LayoutData.ActivePage>
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
-                <input asp-for="Input.OldPassword" class="form-control" />
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Input.NewPassword"></label>
                 <input asp-for="Input.NewPassword" class="form-control" />
@@ -26,8 +26,9 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update password</button>
+            <button type="submit" class="btn btn-primary">Set password</button>
         </form>
+        <a class="btn btn-primary mar-top-10" asp-area="Account" asp-page="/Manage/Index" asp-route-layout=@Model.LayoutData.Layout asp-route-active=@Model.LayoutData.ActivePage>Back</a>
     </div>
 </div>
 
